<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/wel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_weight="1" />
    <TextView
        android:id="@+id/relive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/relive"
        android:textSize="30dp"/>
    <TextView
        android:id="@+id/forward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_further"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="invisible"
        android:text="Start"/>

</LinearLayout>