<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:padding="16dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/soon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soon"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_weight="1" />
    <TextView
        android:id="@+id/know_you_well"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/know_you_well"
        android:textSize="30dp"/>
    <TextView
        android:id="@+id/answer_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_questions"
        android:gravity="center"
        android:layout_weight="1"
        android:textAlignment="center"
        android:visibility="invisible"
        android:textSize="20dp"/>
    <Button
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="Next" />
</LinearLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container_question_answer"
    android:gravity="center_vertical">
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="10dp"/>
    <EditText
        android:layout_below="@+id/question"
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="answer"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:visibility="invisible"
        android:layout_margin="10dp"/>
    <Button
        android:layout_below="@+id/answer"
        android:layout_centerHorizontal="true"
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:gravity="center"

        android:text="submit" />

</RelativeLayout>

</RelativeLayout>